# kumatastic

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.arm32  README.md  kumatastic.yaml.example  nodes.yaml.example  pyproject.toml
.github/workflows/: build-arm32.yml  build.yml
deploy/: README.md
deploy/docker/: .env.example  README.md  bootstrap.sh  docker-compose.yml  kuma-db-config.json  kumatastic.yaml.example
deploy/examples/: collector.yaml  kumatastic-collector.service  kumatastic-pusher.service  mmrelay-plugin-config.yaml  pusher.yaml
deploy/systemd/: README.md  collector.yaml  kumatastic-collector.service  kumatastic-sync.cron
docs/: architecture.md  configuration.md  tuning.md
kumatastic/: __init__.py  __main__.py  cli.py  collector.py  config.py  manifest.py  mmrelay_plugin.py  pusher.py  state.py
scripts/: clean_kuma.py  create_status_page.py
tests/: __init__.py  test_collector.py  test_config.py  test_manifest.py  test_pusher.py  test_state.py
