[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kumatastic"
version = "0.1.0"
description = "Decoupled Meshtastic node monitoring with Uptime Kuma integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
keywords = ["meshtastic", "uptime-kuma", "monitoring", "mesh-network"]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
meshtastic = [
    "meshtastic>=2.0.0",
]
socketio = [
    "python-socketio[client]>=5.0.0",
]
all = [
    "meshtastic>=2.0.0",
    "python-socketio[client]>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
kumatastic = "kumatastic.cli:main"

[project.urls]
Homepage = "https://github.com/georgia-statewide-mesh-coalition/kumatastic"
Repository = "https://github.com/georgia-statewide-mesh-coalition/kumatastic"
Original = "https://github.com/roperscrossroads/kumatastic"

[tool.setuptools.packages.find]
where = ["."]
include = ["kumatastic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["kumatastic"]
